styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/* general */

*{
    box-sizing: border-box; 
    margin: 0;
    padding: 0; 
}

body{
    font-family: "Montserrat", sans-serif;
    background-color: #0b0b0d;
    color: white;
    background-image: url('../assets/img/background-main.jpg');
}

/* header */

h1{
    margin-top: 50px;
    text-align: center; 
    font-size: 56px;
    font-weight: 800;    
    text-transform: uppercase;  
    text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);      
}

/* maint */

main{
    margin-top: 40px;    
    display: flex;
    justify-content: center;
    gap: 30px;
}



.gallery-item{ 
    border: 1px solid rgba(255, 255, 255, 0.3);
    width: 500px;
    height: 500px;
    margin: 20px;
    text-align: center;
    border-radius: 16px;
    box-shadow: 0 0 30px rgba(255, 255, 255, 1);
    padding: 20px;
    background-color: black;
}

img{
    height: 400px;
}

.caption{
    font-size: 40px;
    font-weight: bold;
}

/* footer */

footer{
    margin-top: 20px;
    text-align: center;   
    font-weight: bold;
    text-transform: uppercase; 
}

h3{
    font-size: 30px;
    text-shadow: 0 0 25px rgba(255, 255, 255, 0.6);       
}

/* media adapt */


@media (max-width: 1140px)  {
    main{
        flex-direction: column;
        align-items: center;
    }
    h1{
        font-size: 80px;
    }
}

